<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:fitsSystemWindows="true"
    android:layout_marginTop="19dp"
    android:orientation="vertical">



        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/fontColor"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/badges"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/colorMaterialDark"
                    android:textSize="18sp" />


             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">

                 <androidx.cardview.widget.CardView
                     android:id="@+id/id_badge_card"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     app:cardBackgroundColor="@color/transparent"
                     >
                     <ImageView
                         android:id="@+id/id_badge_img"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="fitXY"/>
                 </androidx.cardview.widget.CardView>

                 <androidx.cardview.widget.CardView
                     android:id="@+id/phone_badge_card"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
                     app:cardBackgroundColor="@color/transparent"
                     >
                     <ImageView
                         android:id="@+id/phone_badge_img"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="fitXY"/>
                 </androidx.cardview.widget.CardView>

                 <androidx.cardview.widget.CardView
                     android:id="@+id/email_badge_card"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
                     app:cardBackgroundColor="@color/transparent"

                     >
                     <ImageView
                         android:id="@+id/email_badge_img"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="fitXY"/>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/my_services"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/colorMaterialDark"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/services_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/reviews"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/colorMaterialDark"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviews_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"/>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>