<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_tasks"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/colorMaterialDark"
                    android:textSize="26sp"
                    android:layout_marginLeft="10dp"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/projects_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_tasks"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/fontColor"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/completed_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expired_tasks"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/fontColor"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/expired_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp" />

                <LinearLayout
                    android:id="@+id/no_projects_found"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/empty_state"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No project started"
                        android:textColor="@color/colorMaterialDark"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="26sp"
                        android:layout_marginTop="-20dp"/>

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ready to start a new project find nearby pros in your area"
                            android:textColor="@color/colorMaterialDark"
                            android:textAlignment="center"
                            android:fontFamily="@font/montserrat"
                            android:textSize="14sp"/>

                    </LinearLayout>




                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/overlay_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/overlay_light_60">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="@style/AVLoadingIndicatorView"
            android:layout_centerInParent="true"
            android:visibility="visible"
            app:indicatorName="BallBeatIndicator"
            app:indicatorColor="@color/colorMaterialDark"/>

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finding your projects..."
            android:fontFamily="@font/montserrat"
            android:layout_below="@id/avi"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:padding="15dp"
            android:textColor="@color/colorMaterialDark"
            android:textSize="16sp"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:layout_centerInParent="true"
        android:id="@+id/lyt_not_found"
        android:visibility="gone"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="uh oh, there was a problem"
            android:layout_gravity="center"
            android:textColor="@color/colorMaterialDark"
            />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_auth_google"
            android:text="Retry"/>
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>