<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/activity_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMaterialWhite"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bt_close"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="35dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/receiving_color"
                    app:srcCompat="@drawable/ic_close" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/profile_lyt"
                android:layout_below="@id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="2dp"
                    app:cardElevation="2sp"
                    app:cardBackgroundColor="@color/receiving_color">
                    <ImageView
                        android:id="@+id/pro_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        />

                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/pro_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/montserrat_bold"
                    android:maxLines="2"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:autoSizeMaxTextSize="20sp"
                    android:textColor="@color/colorMaterialDark"
                    />

                <TextView
                    android:id="@+id/pro_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="10sp"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/fontColor"
                    android:text="@string/demo_address"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/profile_to_chat"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="16dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="0.9dp"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_chat_24px"
                            android:layout_gravity="center"
                            android:tint="@color/receiving_color"/>
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/hire_pro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_rounded_primary"
                        android:backgroundTint="@color/receiving_color"
                        android:text="@string/hire_pro"
                        android:textColor="@color/colorMaterialWhite"
                        android:fontFamily="@font/poppins_semibold"
                        android:textAllCaps="false"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/share_profile"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_marginLeft="16dp"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="0.9dp"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_share_2"
                            android:layout_gravity="center"
                            android:tint="@color/receiving_color"/>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/profile_lyt"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/task_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/colorMaterialDark"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tasks Done"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/fontColor"
                        android:textSize="14sp"/>
                </LinearLayout>

<!--     Todo:: enable this for next release     -->
    <!--   <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical"-->
<!--                    android:layout_centerInParent="true"-->
<!--                    android:gravity="center_horizontal">-->

<!--                    <TextView-->
<!--                        android:id="@+id/pro_rating"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:fontFamily="@font/montserrat_bold"-->
<!--                        android:text="0.0"-->
<!--                        android:textColor="@color/colorMaterialDark"-->
<!--                        android:textSize="16sp" />-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Rating"-->
<!--                        android:fontFamily="@font/montserrat"-->
<!--                        android:textColor="@color/fontColor"-->
<!--                        android:textSize="14sp"/>-->
<!--                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Pro"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/waiting_color"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Level"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/fontColor"
                        android:textSize="12sp"/>
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/receiving_color"
            app:tabIndicatorHeight="3dp"
            app:tabMode="fixed"
            android:layout_below="@id/relative_list"
            app:tabSelectedTextColor="@color/colorMaterialDark"
            app:tabTextAppearance="@style/TextAppearance.Subhead.Bold"
            app:tabTextColor="@color/grey_60" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <RelativeLayout
        android:id="@+id/overlay_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/overlay_light_60">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="@style/AVLoadingIndicatorView"
            android:layout_centerInParent="true"
            android:visibility="visible"
            app:indicatorName="BallBeatIndicator"
            app:indicatorColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/loading_text"
            android:layout_below="@id/avi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading..."
            android:visibility="visible"
            android:textColor="@color/colorMaterialDark"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>